Top aligning table text + fixing filters

--- a/app/assets/stylesheets/admin/base.scss
+++ b/app/assets/stylesheets/admin/base.scss
@@ -268,7 +268,12 @@ table .ellipsis {
 
   > thead > tr > th {
     border-color: $black;
-    vertical-align: middle;
+    vertical-align: top;
+  }
+
+  th,
+  td {
+    vertical-align: top !important;
   }
 
   > tbody > tr {
